--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 
     <groupId>ru.kpfu.itis.genatulin</groupId>
     <artifactId>java-kotlin-homework</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-
+        <module>2k-171</module>
     </modules>
 
     <name>java-kotlin-homework</name>
