--- a/2k-171/pom.xml
+++ b/2k-171/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
