--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
+
+        <module>2k-227</module>
         <module>2k-171</module>
     </modules>
 
