Write add controller

--- a/hw5/src/main/resources/application.properties
+++ b/hw5/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+spring.datasource.username=postgresql
+spring.datasource.password=230764ugole
+spring.datasource.driver-class-name=org.postgresql.Driver
