--- a/hw5/build.gradle
+++ b/hw5/build.gradle
@@ -14,9 +14,9 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.6.4.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.4.Final'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
