--- a/hw5/src/main/resources/application.properties
+++ b/hw5/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.datasource.username=postgres
 spring.datasource.password=230764ugole
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
