--- a/hw5/src/main/resources/application.properties
+++ b/hw5/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.datasource.username=postgres
-spring.datasource.password=230764ugole
+spring.datasource.password=simple123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
